src/Pages/Home/components/Specials/Specials.module.css
.specialsSection .cardContainer {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(264.67px, 1fr));
    gap: 20px 0;
}

.specialsSection .mainDesc {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.specialsSection .mainDesc h1 {
    color: #000;

/* Display Title */
font-family: Markazi Text;
font-size: 4rem;
font-style: normal;
font-weight: 500;
line-height: normal;
}

.specialsSection .mainDesc button {
    width: 200px;
    height: 60px;
    cursor: pointer;
    color: #333333;
    background-color: #F4CE14;
    border: none;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
}

.specialsSection .cardContainer article,
section > section article img {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.specialsSection section > section article {
    display: flex;
    flex-flow: column;
    justify-content: space-between;
    width: 264.67px;
    position: relative;
}

.specialsSection section > section article section {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

section > section article section,
section > section article p {
    padding-left: 10px;
    padding-right: 10px;
}

.specialsSection section > section article img {
    height: 185.26px;
}

.specialsSection .deliverySection {
    display: flex;
}

